--- a/assets/base.css
+++ b/assets/base.css
@@ -4202,3 +4202,8 @@ text-component {
 .header__row {
   background-color: lightblue;
 }
+
+.header__row header__row--top color-scheme-1 {
+    background-color: lightblue;
+
+}
