--- a/assets/base.css
+++ b/assets/base.css
@@ -4199,7 +4199,8 @@ text-component {
   box-shadow: none;
 }
 
+/* My Custom CSS */
 
-#header-component{
+/* #header-component{
   background-color: lightblue;
-}
+} */
