--- a/assets/base.css
+++ b/assets/base.css
@@ -4158,6 +4158,8 @@ text-component {
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
+      /* line-clamp: 3;  */
+
 }
 
 /* Product card title truncation - applied on mobile regardless of view */
@@ -4168,6 +4170,7 @@ text-component {
     overflow: hidden;
     text-overflow: ellipsis;
     -webkit-line-clamp: 3;
+    /* line-clamp: 3;  */
   }
 }
 
